# easy-biologic

./: .gitignore  API.md  README.md  biologic_test.py  pyproject.toml  setup.py
easy_biologic/: __init__.py  _version.py  base_programs.ipynb  base_programs.py  biologic_device.ipynb  biologic_device.py  biologic_programs-v1.ipynb  biologic_programs.ipynb  biologic_programs.py  common.py  data_saver.py  device.ipynb  device.py  ec_find.ipynb  ec_find.py  ec_lib.ipynb  ec_lib.py  find_devices.ipynb  find_devices.py  program.ipynb  program.py  techniques_version.json
easy_biologic/lib/: __init__.py  data_parser.ipynb  data_parser.py  ec_errors.ipynb  ec_errors.py  ec_find.ipynb  ec_find.py  ec_lib.ipynb  ec_lib.py  technique_fields.ipynb  technique_fields.py
easy_biologic/techniques/: TI4.ecc  casp4.ecc  (+7 more)
easy_biologic/techniques-5.35/: cplimit4.ecc
easy_biologic/techniques-6.01/: biovscan.ecc  psp4.ecc  swv.ecc
easy_biologic/techniques-6.04/: Vmp_ii_0437_a6.xlx  ca.ecc  cpp4.ecc  dpv4.ecc  gc4.ecc  npv.ecc  pdp4.ecc  zra.ecc
easy_biologic/techniques-6.08/: EClib.lib  EClib64.lib  IRcmp5.ecc  Vmp_iv_0395_aa.xlx  blfind64.lib  cplimit.ecc  dpa.ecc  dpa4.ecc  gc5.ecc  geis.ecc  gzir5.ecc  iscanlimit5.ecc  lasv.ecc  loop4.ecc  lp.ecc  mp5.ecc  npv4.ecc  npv5.ecc  pdp.ecc  pdp5.ecc  peis4.ecc  peis5.ecc  pow.ecc  psp4.ecc  rnpv5.ecc  seisg.ecc  seisg4.ecc  vscan.ecc  vscanlimit4.ecc  zra5.ecc
techniques/: calimit.ecc  cp4.ecc  lp4.ecc  rnpv4.ecc  vscan4.ecc  vscanlimit.ecc
tests/: ca_limit.py  geis.py  load_technique.py  mpp.py  mpp_all.py  ocv.py  retours_data.py
(+129 files in other folders)
