[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-biologic"
dynamic = ["version"]
description = "An easy library for controlling BioLogic devices."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["biologic"]
authors = [
  { name="Brian Carlsen", email="carlsen.bri@gmail.com" },
]
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas"]

[project.urls]
Issues = "https://github.com/bicarlsen/easy-biologic/issues"
Source = "https://github.com/bicarlsen/easy-biologic"
Homepage = "https://github.com/bicarlsen/easy-biologic"

[tool.hatch.version]
path = "src/easy_biologic/__about__.py"

[tool.hatch.build]
include = ["src/techniques/**/*", "src/data/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/easy_biologic"]